[BFN] Updates to Question Manager > Response Types
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6478 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/questionnaire-questionmanager.html
+++ b/BFN/questionnaire-questionmanager.html
@@ -776,45 +776,60 @@
                             
                             <!-- Dropdown -->
                             <div id="responsetypeDropdown" class="responsetypediv">
-                                The user will be presented with a dropdown of alphanumerically listed options.  Only one selection is possible.
-                                <table style="border:none;" cellpadding="0" cellspacing="0">
+                                <p>The user will be presented with a dropdown of alphanumerically listed options.  Only one selection is possible.</p>
+                                <table style="border:1px solid #939393; border-collapse:collapse; margin-left:5px; margin-bottom:5px; width:625px;" cellpadding="0" cellspacing="0">
                                     <tr>
-                                        <td style="border:none; padding:3px;">
-                                            <input name="newdropdown" type="text" style="width:150px;" />
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; width:50px; text-align:center;" class="content_info">
+                                            <b>Add:</b>
                                         </td>
-                                        <td style="border:none; width:20px; padding:3px; vertical-align:bottom;">
-                                            <input src="../images/tinybutton-add1.gif" onclick="javascript: alert('This would add the indicated option to the pulldown choices.'); return false" style="border:none;" alt="add" alt="Add This Option" type="image" />
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px;" class="content_info">
+                                            <input name="newdropdown" type="text" style="width:100%;" />
+                                        </td>
+                                        <td style="border:1px solid #939393; border-collapse:collapse; width:20px; padding:3px; vertical-align:bottom;" class="content_info">
+                                            <input src="../images/tinybutton-add1.gif" onclick="javascript: alert('This would add the indicated option to the pulldown choices.'); return false" style="border:none; text-align:center;" alt="add" alt="Add This Option" type="image" />
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td style="border:none; padding:3px;">
-                                            <input name="dropdown1" type="text" style="width:150px;" value="One Fish" />
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; text-align:center;" class="content_grey">
+                                            1
                                         </td>
-                                        <td style="border:none; width:20px; padding:3px; vertical-align:bottom;">
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px;">
+                                            <input name="dropdown1" type="text" style="width:100%;" value="One Fish" />
+                                        </td>
+                                        <td style="border:1px solid #939393; border-collapse:collapse; width:20px; padding:3px; vertical-align:bottom; text-align:center;">
                                             <input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated option from the pulldown choices.'); return false" style="border: none;" alt="delete" alt="Delete This Option" type="image" />
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td style="border:none; padding:3px;">
-                                            <input name="dropdown2" type="text" style="width:150px;" value="Two Fish" />
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; text-align:center;" class="content_grey">
+                                            2
                                         </td>
-                                        <td style="border:none; width:20px; padding:3px; vertical-align:bottom;">
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px;">
+                                            <input name="dropdown2" type="text" style="width:100%;" value="Two Fish" />
+                                        </td>
+                                        <td style="border:1px solid #939393; border-collapse:collapse; width:20px; padding:3px; vertical-align:bottom; text-align:center;">
                                             <input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated option from the pulldown choices.'); return false" style="border: none;" alt="delete" alt="Delete This Option" type="image" />
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td style="border:none; padding:3px;">
-                                            <input name="dropdown3" type="text" style="width:150px;" value="Red Fish" />
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; text-align:center;" class="content_grey">
+                                            3
                                         </td>
-                                        <td style="border:none; width:20px; padding:3px; vertical-align:bottom;">
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px;">
+                                            <input name="dropdown3" type="text" style="width:100%;" value="Red Fish" />
+                                        </td>
+                                        <td style="border:1px solid #939393; border-collapse:collapse; width:20px; padding:3px; vertical-align:bottom; text-align:center;">
                                             <input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated option from the pulldown choices.'); return false" style="border: none;" alt="delete" alt="Delete This Option" type="image" />
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td style="border:none; padding:3px;">
-                                            <input name="dropdown4" type="text" style="width:150px;" value="Blue Fish" />
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; text-align:center;" class="content_grey">
+                                            4
                                         </td>
-                                        <td style="border:none; width:20px; padding:3px; vertical-align:bottom;">
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px;">
+                                            <input name="dropdown4" type="text" style="width:100%;" value="Blue Fish" />
+                                        </td>
+                                        <td style="border:1px solid #939393; border-collapse:collapse; width:20px; padding:3px; vertical-align:bottom; text-align:center;">
                                             <input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated option from the pulldown choices.'); return false" style="border: none;" alt="delete" alt="Delete This Option" type="image" />
                                         </td>
                                     </tr>
@@ -823,45 +838,69 @@
                             
                             <!-- Checkbox -->
                             <div id="responsetypeCheckbox" class="responsetypediv">
-                                The user will be presented with one or more checkboxes.  No selections, or more than one selection, is possible.
-                                <table style="border:none;" cellpadding="0" cellspacing="0">
+                                <p>The user will be presented with one or more checkboxes.  No selections, or more than one selection, is possible.</p>
+                                <table style="border:1px solid #939393; border-collapse:collapse; margin-left:5px; margin-bottom:5px; width:625px;" cellpadding="0" cellspacing="0">
                                     <tr>
-                                        <td style="border:none; padding:3px;">
-                                            <input name="newcheckbox" type="text" style="width:150px;" />
+                                        <td colspan="2" style="border:1px solid #939393; border-collapse:collapse; padding:3px; width:50px; text-align:right;" class="content_info">
+                                            <b>Maximum Number of Answers:</b>
+                                            <input name="numberofquestions" type="text" style="width:25px;" value="2" />
                                         </td>
-                                        <td style="border:none; width:20px; padding:3px; vertical-align:bottom;">
+                                        <td style="border:1px solid #939393; border-collapse:collapse; width:55px; padding:3px; vertical-align:bottom; text-align:center;" class="content_info">
+                                            <input src="../images/tinybutton-update.gif" onclick="javascript: alert('This would update the possible number of answers selected.'); return false" style="border:none;" alt="update" alt="Update This Response Type" type="image" />
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; width:50px; text-align:center;" class="content_info">
+                                            <b>Add:</b>
+                                        </td>
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px;" class="content_info">
+                                            <input name="newdropdown" type="text" style="width:100%;" />
+                                        </td>
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; vertical-align:bottom; text-align:center;" class="content_info">
                                             <input src="../images/tinybutton-add1.gif" onclick="javascript: alert('This would add the indicated option to the pulldown choices.'); return false" style="border:none;" alt="add" alt="Add This Option" type="image" />
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td style="border:none; padding:3px;">
-                                            <input name="checkbox1" type="text" style="width:150px;" value="One Byte" />
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; text-align:center;" class="content_grey">
+                                            1
                                         </td>
-                                        <td style="border:none; width:20px; padding:3px; vertical-align:bottom;">
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px;">
+                                            <input name="dropdown1" type="text" style="width:100%;" value="One Byte" />
+                                        </td>
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; vertical-align:bottom; text-align:center;">
                                             <input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated option from the pulldown choices.'); return false" style="border: none;" alt="delete" alt="Delete This Option" type="image" />
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td style="border:none; padding:3px;">
-                                            <input name="checkbox2" type="text" style="width:150px;" value="Two Bytes" />
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; text-align:center;" class="content_grey">
+                                            2
                                         </td>
-                                        <td style="border:none; width:20px; padding:3px; vertical-align:bottom;">
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px;">
+                                            <input name="dropdown2" type="text" style="width:100%;" value="Two Bites" />
+                                        </td>
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; vertical-align:bottom; text-align:center;">
                                             <input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated option from the pulldown choices.'); return false" style="border: none;" alt="delete" alt="Delete This Option" type="image" />
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td style="border:none; padding:3px;">
-                                            <input name="checkbox3" type="text" style="width:150px;" value="Red Light" />
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; text-align:center;" class="content_grey">
+                                            3
                                         </td>
-                                        <td style="border:none; width:20px; padding:3px; vertical-align:bottom;">
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px;">
+                                            <input name="dropdown3" type="text" style="width:100%;" value="Red Light" />
+                                        </td>
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; vertical-align:bottom; text-align:center;">
                                             <input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated option from the pulldown choices.'); return false" style="border: none;" alt="delete" alt="Delete This Option" type="image" />
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td style="border:none; padding:3px;">
-                                            <input name="checkbox4" type="text" style="width:150px;" value="Blue Light" />
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; text-align:center;" class="content_grey">
+                                            4
                                         </td>
-                                        <td style="border:none; width:20px; padding:3px; vertical-align:bottom;">
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px;">
+                                            <input name="dropdown4" type="text" style="width:100%;" value="Green Lights" />
+                                        </td>
+                                        <td style="border:1px solid #939393; border-collapse:collapse; padding:3px; vertical-align:bottom; text-align:center;">
                                             <input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated option from the pulldown choices.'); return false" style="border: none;" alt="delete" alt="Delete This Option" type="image" />
                                         </td>
                                     </tr>
