--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -1702,23 +1702,23 @@
                         </td>
                     </tr>
                     <tr>
-                        <th colspan="3" style="text-align:right;">
+                        <td class="infoline" colspan="3" style="text-align:right; font-weight:bold;">
                         	Total:
-                        </th>
-                        <td class="infoline" style="text-align:right; font-weight:bold;">
-                            $0.00
                         </td>
                         <td class="infoline" style="text-align:right; font-weight:bold;">
                             $0.00
                         </td>
-                        <th rowspan="2">
+                        <td class="infoline" style="text-align:right; font-weight:bold;">
+                            $0.00
+                        </td>
+                        <th rowspan="2" class="infoline">
                             <input name="x" src="../images/tinybutton-recalculate.gif" onclick="javascript: alert('If this were not a mock, this button would recalculate the three totals above.'); return false" class="tinybutton" alt="recalculate" title="Recalculate All" type="image" />
                         </th>
                     </tr>
                     <tr>
-                        <th colspan="3" style="text-align:right;">
+                        <td class="infoline" colspan="3" style="text-align:right; font-weight:bold;">
                         	Total Anticipated (Direct + F&amp;A):
-                        </th>
+                        </td>
                         <td colspan="2" class="infoline" style="text-align:right; font-weight:bold;">
                             $0.00
                         </td>
