[BFN] KRAFUNC-185 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6521 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/kauli-snippets.html
+++ b/BFN/kauli-snippets.html
@@ -235,6 +235,6 @@ Page
 </select>
 
 <!-- Refresh -->
-<input name="refresh0" src="../images/arrow_refresh.png" class="tinybutton" alt="Refresh Pulldown Options" title="Refresh Pulldown Options" type="image" />
+<input src="../images/arrow_refresh.png" onclick="javascript: alert('This would update the Value description and options based on the Type pulldown.'); return false" class="tinybutton" alt="refresh" title="Refresh" type="image" />
                     
                     
