[BFN] KRAFUNC-183 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6522 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/questionnaire-editor.html
+++ b/BFN/questionnaire-editor.html
@@ -782,18 +782,14 @@
                                 Status:
                             </td>
                             <td class="content_white">
-                                <select name="CustomData" id="CustomData">
-                                    <option value="0">select</option>
-                                    <option value="1" selected>Active</option>
-                                    <option value="2">Inactive</option>
-                                </select>
+                                <input type="radio" style="border:none;" name="CustomDataa" value="0" checked="checked" />Active
+                                <input type="radio" style="border:none;" name="CustomDataa" value="1" />Inactive
                             </td>
                             <td class="content_grey" style="width:85px; text-align:right; white-space:nowrap;">
                                 Final:
                             </td>
                             <td class="content_white">
-                                <input type="radio" style="border:none;" name="CustomData" value="0" />Yes
-                                <input type="radio" style="border:none;" name="CustomData" value="1" checked="checked" />No
+                                <input type="checkbox" style="border:none;" name="CustomData" value="0" checked="checked" />
                             </td>
                             <td class="content_grey" style="width:85px; text-align:right;">
                                 Lifespan:
@@ -911,7 +907,7 @@
                             	1.000
                             </td>
                             <td class="content_white" style="text-align:center;">
-                            	<input src="../images/tinybutton-view.gif" onclick="javascript: alert('This would navigate to the associated questionnaire.'); return false" style="border:none;" alt="view" title="View" type="image" />
+                            	<input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated questionnaire use.'); return false" style="border:none;" alt="delete" title="Delete" type="image" />
                             </td>
                         </tr>
                         <tr>
@@ -931,7 +927,7 @@
                             	1.000
                             </td>
                             <td class="content_white" style="text-align:center;">
-                            	<input src="../images/tinybutton-view.gif" onclick="javascript: alert('This would navigate to the associated questionnaire.'); return false" style="border:none;" alt="view" title="View" type="image" />
+                            	<input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated questionnaire use.'); return false" style="border:none;" alt="delete" title="Delete" type="image" />
                             </td>
                         </tr>
                         <tr>
@@ -951,7 +947,7 @@
                             	1.000
                             </td>
                             <td class="content_white" style="text-align:center;">
-                            	<input src="../images/tinybutton-view.gif" onclick="javascript: alert('This would navigate to the associated questionnaire.'); return false" style="border:none;" alt="view" title="View" type="image" />
+                            	<input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated questionnaire use.'); return false" style="border:none;" alt="delete" title="Delete" type="image" />
                             </td>
                         </tr>
                         <tr>
@@ -971,7 +967,7 @@
                             	1.000
                             </td>
                             <td class="content_white" style="text-align:center;">
-                            	<input src="../images/tinybutton-view.gif" onclick="javascript: alert('This would navigate to the associated questionnaire.'); return false" style="border:none;" alt="view" title="View" type="image" />
+                            	<input src="../images/tinybutton-delete1.gif" onclick="javascript: alert('This would remove the associated questionnaire use.'); return false" style="border:none;" alt="delete" title="Delete" type="image" />
                             </td>
                         </tr>
                     </table>
