--- a/kra-awa-dev/aw-actions.html
+++ b/kra-awa-dev/aw-actions.html
@@ -212,20 +212,21 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         <input type="checkbox" class="nobord" name="CustomData2" value="2" checked="checked" /> Comments<br />
                                         <input type="checkbox" class="nobord" name="CustomData3" value="3" checked="checked" /> Cost Share<br />
                                         <input type="checkbox" class="nobord" name="CustomData4" value="4" checked="checked" /> Equipment<br />
-                                        <input type="checkbox" class="nobord" name="CustomData5" value="5" checked="checked" /> Flow Thru<br />
-                                        <input type="checkbox" class="nobord" name="CustomData6" value="6" checked="checked" /> Foreign Travel
+                                        <input type="checkbox" class="nobord" name="CustomData9" value="9" checked="checked" /> F&amp;A Cost<br />
+                                        <input type="checkbox" class="nobord" name="CustomData5" value="5" checked="checked" /> Flow Thru
                                     </td>
                                     <td style="border:none; white-space:nowrap; padding:3px; vertical-align:top;">
+                                        
+                                        <input type="checkbox" class="nobord" name="CustomData6" value="6" checked="checked" /> Foreign Travel<br />
                                         <input type="checkbox" class="nobord" name="CustomData7" value="7" /> Funding Summary<br />
                                         <input type="checkbox" class="nobord" name="CustomData8" value="8" /> Hierarchy<br />
-                                        <input type="checkbox" class="nobord" name="CustomData9" value="9" checked="checked" /> Indirect Cost<br />
+                                        <input type="checkbox" class="nobord" name="CustomData14" value="14" checked="checked" /> Keywords<br />
                                         <input type="checkbox" class="nobord" name="CustomData10" value="10" checked="checked" /> Other Data<br />
                                         <input type="checkbox" class="nobord" name="CustomData11" value="11" checked="checked" /> Payment<br />
-                                        <input type="checkbox" class="nobord" name="CustomData12" value="12" checked="checked" /> Proposals Due<br />
-                                        <input type="checkbox" class="nobord" name="CustomData13" value="13" checked="checked" /> Reporting
+                                        <input type="checkbox" class="nobord" name="CustomData12" value="12" checked="checked" /> Proposals Due
                                     </td>
                                     <td style="border:none; white-space:nowrap; padding:3px; vertical-align:top;">
-                                        <input type="checkbox" class="nobord" name="CustomData14" value="14" checked="checked" /> Keywords<br />
+                                        <input type="checkbox" class="nobord" name="CustomData13" value="13" checked="checked" /> Reporting<br />
                                         <input type="checkbox" class="nobord" name="CustomData15" value="15" checked="checked" /> Special Review<br />
                                         <input type="checkbox" class="nobord" name="CustomData16" value="16" checked="checked" /> Subaward<br />
                                         <input type="checkbox" class="nobord" name="CustomData17" value="17" checked="checked" /> Technical Reporting<br />
