[BFN] KRAFUNC-183 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6546 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/BFN/questionnaire-editor.html
+++ b/BFN/questionnaire-editor.html
@@ -757,6 +757,14 @@
                         </tr>
                         <tr>
                             <td class="content_grey" style="width:65px; text-align:right;">
+                                Status:
+                            </td>
+                            <td class="content_white" colspan="4">
+                            	This questionnaire is up to date.  All questions used are the latest versions.
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="content_grey" style="width:65px; text-align:right;">
                                 Description:
                             </td>
                             <td class="content_white" colspan="4">
