--- a/kra-irb-dev/irb-irbmanagement.html
+++ b/kra-irb-dev/irb-irbmanagement.html
@@ -1,1 +1,101 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head> <title>Kuali</title><LINK REL="SHORTCUT ICON" HREF="../images/icon.ico"><meta http-equiv=Content-Type content="text/html; charset=ISO-8859-1"><link href="../css/kuali_application.css" rel=stylesheet type="text/css"><link href="../css/kuali.css" rel=stylesheet type="text/css"><script language=javascript src="../scripts/my_bm_inc.js"></script><script language=javascript1.2 src="../scripts/my_explorer.js"></script><script language=JavaScript1.2 src="../scripts/my_wap_bkmrk_fix.js"></script><script language=JavaScript src="../scripts/CalendarPopup.js"></script><script language=JavaScript type="text/JavaScript"><!--function MM_goToURL() { //v3.0  var i, args=MM_goToURL.arguments; document.MM_returnValue = false;  for (i=0; i<(args.length-1); i+=2) eval(args[i]+".location='"+args[i+1]+"'");}function MM_openBrWindow(theURL,winName,features) { //v2.0  window.open(theURL,winName,features);}//--></script></head><body><form name="example"  method="post" action=""><div class="headerarea-kra" id="headerarea">  <h1>IRB - Management <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>  <div class="headerbox">    <table cellpadding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">        <tr>          <th scope=row><div align=right>Document Id:</div></th>          <td>291607</td>          <th scope=row><div align=right>Status:</div></th>          <td>new</td>        </tr>        <tr>          <th scope=row><div align=right>Initiator:</div></th>          <td>&lt;user name&gt;</td>  <th scope=row><div align=right>Last Updated:</div></th>          <td>10:06 AM 03/30/2005</td>        </tr>        <tr>          <th class="bord-l" scope=row><div align=right>Protocol Type:</div></th>          <td class="datacell-l"></td>          <th class="bord-l" scope=row><div align=right>Version:</div></th>          <td class="datacell-l">1</td>        </tr>      </table>  </div></div>  <!--TABBED TOP NAVIGATION-->  <div class="horz-links-bkgrnd" id="horz-links">  <div id="tabs">    <dl class="tabul">                  <dt><span class="tabright">        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-protocol.html');return document.MM_returnValue" value="Protocol">        </span></dt>  <dt><span class="tabright">        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-personnel.html');return document.MM_returnValue" value="Personnel">        </span></dt>  <dt><span class="tabright">        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-customdata.html');return document.MM_returnValue" value="Custom Data">        </span></dt>  <dt><span class="tabright">        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-questionnaire.html');return document.MM_returnValue" value="Questions">        </span></dt>  <dt><span class="tabright">        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-specialreview.html');return document.MM_returnValue" value="Special Review">        </span></dt>  <dt><span class="tabright">        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-permissions.html');return document.MM_returnValue" value="Permissions">        </span></dt>  <dt><span class="tabright">        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-notes.html');return document.MM_returnValue" value="Notes &amp; Attachments">        </span></dt>    <dt><span class="tabright">        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-protocolactions.html');return document.MM_returnValue" value="Protocol Actions">        </span></dt>    </dl>  </div></div>  <div class="msg-excol">    <div class="left-errmsg">      <div class=""><span class="excol"> </span></div>    </div>    <div class="right">      <div class="excol">        <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton1-siteindex.gif">        <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-expandall.gif" alt="expand all">        <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-collapseall.gif" alt="collapse all">        <br>      </div>    </div>    </div>  <table width="100%" cellpadding="0" cellspacing="0">    <tr>      <td class="column-left"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>      <td><div class="globalbuttons">(under construction)</div></td>      <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>    </tr>  </table><p>&nbsp;</p><p>&nbsp;</p></body></html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head> 
+<title>Kuali</title>
+<LINK REL="SHORTCUT ICON" HREF="../images/icon.ico">
+<meta http-equiv=Content-Type content="text/html; charset=ISO-8859-1">
+<link href="../css/kuali_application.css" rel=stylesheet type="text/css">
+<link href="../css/kuali.css" rel=stylesheet type="text/css">
+<script language=javascript src="../scripts/my_bm_inc.js"></script>
+<script language=javascript1.2 src="../scripts/my_explorer.js"></script>
+<script language=JavaScript1.2 src="../scripts/my_wap_bkmrk_fix.js"></script>
+<script language=JavaScript src="../scripts/CalendarPopup.js"></script>
+<script language=JavaScript type="text/JavaScript">
+<!--
+function MM_goToURL() { //v3.0
+  var i, args=MM_goToURL.arguments; document.MM_returnValue = false;
+  for (i=0; i<(args.length-1); i+=2) eval(args[i]+".location='"+args[i+1]+"'");
+}
+function MM_openBrWindow(theURL,winName,features) { //v2.0
+  window.open(theURL,winName,features);
+}
+//-->
+</script>
+</head>
+<body>
+<form name="example"  method="post" action="">
+<div class="headerarea-kra" id="headerarea">
+  <h1>IRB - Management <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width=15 height=14 border=0 align=absmiddle onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></h1>
+  <div class="headerbox">
+    <table cellpadding=0 cellspacing=0 summary="document header: general information" style="border-bottom:#A0A0A0; border-bottom-style:solid; border-bottom-width:1px">
+        <tr>
+          <th scope=row><div align=right>Document Id:</div></th>
+          <td>291607</td>
+          <th scope=row><div align=right>Status:</div></th>
+          <td>new</td>
+        </tr>
+        <tr>
+          <th scope=row><div align=right>Initiator:</div></th>
+          <td>&lt;user name&gt;</td>  <th scope=row><div align=right>Last Updated:</div></th>
+          <td>10:06 AM 03/30/2005</td>
+        </tr>
+        <tr>
+          <th class="bord-l" scope=row><div align=right>Protocol Type:</div></th>
+          <td class="datacell-l"></td>
+          <th class="bord-l" scope=row><div align=right>Version:</div></th>
+          <td class="datacell-l">1</td>
+        </tr>
+      </table>
+  </div>
+</div>
+  <!--TABBED TOP NAVIGATION-->
+  <div class="horz-links-bkgrnd" id="horz-links">
+  <div id="tabs">
+    <dl class="tabul">
+      
+      
+
+      <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-protocol.html');return document.MM_returnValue" value="Protocol">
+        </span></dt>  <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-personnel.html');return document.MM_returnValue" value="Personnel">
+        </span></dt>  <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-customdata.html');return document.MM_returnValue" value="Custom Data">
+        </span></dt>  <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-questionnaire.html');return document.MM_returnValue" value="Questionnaire">
+        </span></dt>  <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-specialreview.html');return document.MM_returnValue" value="Special Review">
+        </span></dt>  <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-permissions.html');return document.MM_returnValue" value="Permissions">
+        </span></dt>  <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-notes.html');return document.MM_returnValue" value="Notes &amp; Attachments">
+        </span></dt>    <dt><span class="tabright">
+        <input name="Submit" type="submit" onClick="MM_goToURL('parent','irb-protocolactions.html');return document.MM_returnValue" value="Protocol Actions">
+        </span></dt>
+    </dl>
+  </div>
+</div>
+  <div class="msg-excol">
+    <div class="left-errmsg">
+      <div class=""><span class="excol"> </span></div>
+    </div>
+    <div class="right">
+      <div class="excol">
+        <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton1-siteindex.gif">
+        <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-expandall.gif" alt="expand all">
+        <input name="imageField" type="image" class="tinybutton" src="../images/tinybutton-collapseall.gif" alt="collapse all">
+        <br>
+      </div>
+    </div>
+    </div>
+  <table width="100%" cellpadding="0" cellspacing="0">
+    <tr>
+      <td class="column-left"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
+      <td><div class="globalbuttons">(under construction)</div></td>
+      <td class="column-right"><img src="../images/pixel_clear.gif" alt="" width="20" height="20"></td>
+    </tr>
+  </table>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+</body>
+</html>
