https://test.kuali.org/jira/browse/KRAFUNC-58
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6554 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -3137,35 +3137,39 @@
               <span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
             <table cellpAdding=0 cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
-                <th width="20%"> <div align="right">Sponsor Award ID:</div></th>
-                <td width="30%" align="left">1R01CA123456</td>
                 <th width="20%"><div align="right">
-                    <label for ="total cost limit">Award Status: </label>
-                  </div></th>
-                <td width="30%">Active</td>
-              </tr>
+                  <label for ="residual funds">&nbsp;Award ID:</label>
+                </div></th>
+                <td width="30%">000082-001</td>
+                <th width="20%"><div align="right">Award Type: </div></th>
+                <td width="30%">Grant</td>
+                </tr>
               <tr>
-                <th nowrap="nowrap"><div align="right">Account Type: </div></th>
-                <td align="left">Regular</td>
-                <th><div align="right">
-                    <label for ="residual funds">&nbsp;Award ID:</label>
-                  </div></th>
-                <td>000082-001</td>
-              </tr>
-              <tr>
+                <th> <div align="right">Sponsor Award ID:</div></th>
+                <td align="left">1R01CA123456</td>
                 <th><div align="right">&nbsp;Activity Type: </div></th>
                 <td>Organized Research</td>
+                </tr>
+              <tr>
                 <th nowrap="nowrap"><div align="right">
-                    <label for ="unrecovered f&amp;a">Account ID: </label>
-                  </div></th>
+                  <label for ="unrecovered f&amp;a">Account ID: </label>
+                </div></th>
                 <td>300150</td>
+                <th nowrap="nowrap"><div align="right">Account Type: </div></th>
+                <td align="left">Regular</td>
+                </tr>
+              <tr>
+                <th><div align="right">
+                  <label for ="total cost limit">Award Status: </label>
+                </div></th>
+                <td>Active</td>
+                <th>&nbsp;</th>
+                <td>&nbsp;</td>
               </tr>
               <tr>
-                <th><div align="right">Award Type: </div></th>
-                <td>Grant</td>
                 <th scope=row><div align="right"> Title: </div></th>
-                <td>Important Scientific Stuff</td>
-              </tr>
+                <td colspan="3">Important Scientific Stuff</td>
+                </tr>
             </table>
              <!-- Element Content: Dates & Amounts -->
             <div class="h2-container">
@@ -3206,7 +3210,7 @@
             </table> 
             <!-- Element Content: Settings -->
             <div class="h2-container">
-              <h2><span class="subhead-left">Award Features</span></h2>
+              <h2><span class="subhead-left">Award Details Recorded</span></h2>
               <span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span></div>
             <table cellpAdding=0 cellspacing="0" summary="view/edit ad hoc recipients">
               <tr>
@@ -3253,8 +3257,8 @@
                 </th>
               </tr>
               <tr>
-                <td> Godfrey, Alberta D          <span class="fineprint">Principal Investigator</span>      </td>
-                <td scope=row><label for ="Modular budget"> 375547 - Pediatrics       <span class="fineprint">Lead Unit</span>           <br>
+                <td> Godfrey, Alberta D       (Principal Investigator)</td>
+                <td scope=row><label for ="Modular budget"> 375547 - Pediatrics (Lead Unit)<br>
                   823462 - Oncology </label>
                 </td>
               </tr>
